# Portal-Acceso-CFO-Tools

./: .env.example  .gitignore  ARQUITECTURA.md  AZURE_ARCHITECTURE.md  CLAUDE.md  DESIGN_SYSTEM.md  INFORME_ARQUITECTURA_CLOUD.md  RUN_TESTS.bat  START.bat  START_UNIFIED.bat  STOP.bat  TEST_STRATEGY.md  deploy.bat  index.html  package-lock.json  package.json  portal_server.py  requirements_gateway.txt  vite.config.ts
WS_A_TEXTO/: .env.example  CLAUDE.md  START.bat  STOP.bat  config.yaml  pyproject.toml  requirements.txt
WS_A_TEXTO/sound_catch/: __init__.py  __main__.py  cli.py  models.py  pipeline.py
WS_A_TEXTO/sound_catch/bot/: telegram_bot.py
WS_A_TEXTO/sound_catch/conversion/: __init__.py  normalizer.py
WS_A_TEXTO/sound_catch/ingestion/: __init__.py  filesystem.py  url.py  whatsapp.py
WS_A_TEXTO/sound_catch/output/: __init__.py  writer.py
WS_A_TEXTO/sound_catch/transcription/: __init__.py  base.py  whisper_local.py
WS_A_TEXTO/tests/: test_ingestion.py  test_ingestion_url.py  test_ingestion_whatsapp.py  test_models.py  test_output.py  test_pipeline_integration.py
WS_A_TEXTO/web/: CLAUDE.md  PORTAL_INTEGRATION.md
WS_A_TEXTO/web/backend/: .env.example  app.py  router.py
WS_A_TEXTO/web/frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
WS_A_TEXTO/web/frontend/src/: App.tsx  index.css  types.ts
WS_A_TEXTO/web/frontend/src/__tests__/: client.test.ts  setup.ts
WS_A_TEXTO/web/frontend/src/api/: client.ts
WS_A_TEXTO/web/frontend/src/components/: Header.tsx  OptionsPanel.tsx  ProgressBar.tsx  SummaryPanel.tsx  (+2 more)
(+264 files in other folders)
